--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -3,22 +3,8 @@
 <head>
     <meta charset="utf-8"/>
     <link rel="icon" href="%sveltekit.assets%/favicon.png"/>
+    <link rel="stylesheet" href="/global.css">
     <meta name="viewport" content="width=device-width"/>
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            font-family: 'JetBrains Mono', monospace;
-            color: white;
-            max-width: 900px;
-            margin: 0 auto;
-            background: radial-gradient(#484848 2px, black 0);
-            background-size: 100px 100px;
-        }
-    </style>
     %sveltekit.head%
 </head>
 <body>
